add tab 3 and cache node

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-card class="welcome-card">
+    <img src="/assets/shapes.svg" alt="" />
+    <ion-card-header>
+      <ion-card-subtitle>Great!</ion-card-subtitle>
+      <ion-card-title>Welcome to Ionic (github action tab 3)</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>I am tab 3</p>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
